# FT8

./: .gitignore  ARCHITECTURE_TODO.md  FT8CN Quick Reference Guide 0.88 Version_translation.docx  README.md
ft8cn/: .gitignore
ft8cn/app/: .gitignore  build.gradle
ft8cn/app/src/main/: AndroidManifest.xml
ft8cn/app/src/main/assets/: audio_output_help.txt  bands.txt  callsign.txt  launch_supervision_help.txt  readme.txt
ft8cn/app/src/main/cpp/: CMakeLists.new  CMakeLists.txt  ft8Decoder.c  ft8Decoder_dx.c  ft8Encoder_dx.c  ft8Listener.cpp  generate_ft8_dx.cpp
ft8cn/app/src/main/cpp/ft8/: decode.c
ft8cn/app/src/main/cpp/ft8_dx/: constants.h  decode.c  decode.h  encode.c  encode.h  pack.c  pack.h  unpack.c  unpack.h
ft8cn/app/src/main/cpp/ft8_std/: unpack.c
ft8cn/app/src/main/java/com/bg7yoz/ft8cn/: GeneralVariables.java  MainActivity.java  MainViewModel.java  MessageHashMap.java
ft8cn/app/src/main/java/com/bg7yoz/ft8cn/callsign/: CallsignDatabase.java
ft8cn/app/src/main/java/com/bg7yoz/ft8cn/connector/: CableConnector.java  CableSerialPort.java  IComWifiConnector.java  WifiConnector.java
ft8cn/app/src/main/java/com/bg7yoz/ft8cn/database/: DatabaseOpr.java  SecureStorage.java
ft8cn/app/src/main/java/com/bg7yoz/ft8cn/decisions/: Criterion.java  DecisionContext.java  DecisionEngine.java  HybridScorer.java  StationAction.java  StationState.java
ft8cn/app/src/main/java/com/bg7yoz/ft8cn/ft8listener/: FT8SignalListener.java  ReBuildSignal.java
ft8cn/app/src/main/java/com/bg7yoz/ft8cn/ft8signal/: FT8Package.java
ft8cn/app/src/main/java/com/bg7yoz/ft8cn/ft8transmit/: FT8TransmitSignal.java  GenerateFT8.java
ft8cn/app/src/main/java/com/bg7yoz/ft8cn/html/: LogHttpServer.java
ft8cn/app/src/main/java/com/bg7yoz/ft8cn/icom/: IComWifiRig.java  IcomCivUdp.java  IcomUdpBase.java  IcomUdpClient.java
ft8cn/app/src/main/java/com/bg7yoz/ft8cn/log/: SWLQsoList.java  ThirdPartyService.java
ft8cn/app/src/main/java/com/bg7yoz/ft8cn/maidenhead/: MaidenheadGrid.java
ft8cn/app/src/main/java/com/bg7yoz/ft8cn/protocol/: DialogueSequenceValidator.java  FT8MessageClassifier.java  MIGRATION_GUIDE.md  ProtocolStep.java  ReportExtractor.java
ft8cn/app/src/main/java/com/bg7yoz/ft8cn/rigs/: BaseRig.java  IcomRig.java  IcomRigConstant.java
ft8cn/app/src/main/java/com/bg7yoz/ft8cn/spectrum/: SpectrumListener.java
ft8cn/app/src/main/java/com/bg7yoz/ft8cn/timer/: UtcTimer.java
ft8cn/app/src/main/java/com/bg7yoz/ft8cn/ui/: CallingListAdapter.java  CallingListFragment.java  ColumnarView.java  ConfigFragment.java  FreqDialog.java  LogFragment.java  LoginIcomRadioDialog.java  MyCallingFragment.java  ScanFragment.java  SetVolumeDialog.java  SpectrumFragment.java  SpectrumView.java
ft8cn/app/src/main/java/com/bg7yoz/ft8cn/wave/: FT8Resample.java  HamRecorder.java  MicRecorder.java  RecordingForegroundService.java
ft8cn/app/src/main/res/drawable/: button_scan.xml
ft8cn/app/src/main/res/layout/: call_list_holder_item.xml  call_list_holder_simple_item.xml  dialog_export_filter.xml  fragment_calling_list.xml  fragment_config.xml  fragment_log.xml  fragment_my_calling.xml  fragment_scan.xml  fragment_spectrum.xml  item_scan_row.xml  spectrum_layout.xml
ft8cn/app/src/main/res/menu/: bottom_nav_menu.xml
ft8cn/app/src/main/res/navigation/: main_navigation.xml
ft8cn/app/src/main/res/values/: strings.xml
ft8cn/app/src/main/res/values-el/: strings.xml
ft8cn/app/src/main/res/values-es/: strings.xml
ft8cn/app/src/main/res/values-ja/: strings.xml
ft8cn/app/src/main/res/values-ro/: strings.xml
ft8cn/app/src/main/res/values-rus/: strings.xml
ft8cn/app/src/main/res/values-th/: strings.xml
ft8cn/app/src/main/res/values-zh-rCN/: strings.xml
ft8cn/app/src/main/res/values-zh-rHK/: strings.xml
ft8cn/app/src/main/res/values-zh-rMO/: strings.xml
ft8cn/app/src/main/res/values-zh-rTW/: strings.xml
ft8cn/app/src/test/java/com/bg7yoz/ft8cn/protocol/: FT8MessageClassifierTest.java
